tests/tokenize/wrong.token.err
Error: Unexpected char in input
   ╭─[tests/tokenize/wrong.scm:3:1]
   │
 3 │ ```
   · ┬  
   · ╰── Unexpected char `
───╯
